uz se chytla db, env nejde, vraci error na id 1
